# zygisk-qq-native-emoji

./: .gitattributes  .gitignore  AGENTS.md  README.md  build.sh  update.json
.github/workflows/: build.yml
module/: customize.sh  module.prop
native/: CMakeLists.txt
native/src/: module.cpp
